--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.4.5",
     "env-var": "^7.4.2",
     "express": "^4.19.2",
+    "mongoose": "^8.3.4",
     "nodemailer": "^6.9.13",
     "stripe": "^15.6.0"
   },
